--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,5 @@
   },
   "files": [],
   "include": [],
-  "references": [
-    { "path": "packages/runtime" },
-    { "path": "packages/logic" }
-  ]
+  "references": [{ "path": "packages/runtime" }, { "path": "packages/logic" }]
 }
