--- a/packages/logic/package.json
+++ b/packages/logic/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@saffron/logic",
-  "version": "0.0.0",
-  "private": true,
+  "name": "@fstnetwork/logic",
+  "version": "0.5.1",
   "repository": "https://github.com/fstnetwork/loc-logic-sdk-ts",
   "author": "FST Network <dev@fstk.io>",
   "main": "target/index.js",
@@ -10,8 +9,10 @@
     "build": "tsc --build .",
     "clean": "rimraf target"
   },
+  "dependencies": {
+    "@fstnetwork/runtime": "0.5.1"
+  },
   "devDependencies": {
-    "@saffron/runtime": "workspace:*",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   }
