--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,7 +18,7 @@ env:
 jobs:
   format:
     name: Lint format
-    runs-on: [self-hosted, small]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -54,7 +54,7 @@ jobs:
 
   commit:
     name: Lint commit
-    runs-on: [self-hosted, small]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -67,7 +67,7 @@ jobs:
 
   codespell:
     name: Codespell
-    runs-on: [self-hosted, small]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
