--- a/packages/logic/package.json
+++ b/packages/logic/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf target"
   },
   "dependencies": {
-    "@fstnetwork/runtime": "0.5.1"
+    "@fstnetwork/runtime": "workspace:0.5.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
