--- a/packages/loc-logic-sdk/package.json
+++ b/packages/loc-logic-sdk/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@fstnetwork/loc-logic-sdk",
-  "version": "0.5.1-2",
-  "repository": "https://github.com/fstnetwork/loc-logic-sdk-ts",
+  "version": "0.5.1-3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fstnetwork/loc-logic-sdk-ts",
+    "directory": "packages/loc-logic-sdk"
+  },
   "author": "FST Network <dev@fstk.io>",
   "main": "target/index.js",
   "types": "target/index.d.ts",
