--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@fstnetwork/runtime",
   "version": "0.5.1",
-  "repository": "https://github.com/fstnetwork/loc-logic-sdk-ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fstnetwork/loc-logic-sdk-ts",
+    "directory": "packages/runtime"
+  },
   "author": "FST Network <dev@fstk.io>",
   "types": "target/index.d.ts",
   "scripts": {
