chore: add devDependencies `@types/node`

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json}' && nixpkgs-fmt ."
   },
   "devDependencies": {
+    "@types/node": "^18.0.1",
     "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.1"
