--- a/packages/logic/package.json
+++ b/packages/logic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fstnetwork/logic",
-  "version": "0.5.1-1",
+  "version": "0.6.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/fstnetwork/loc-logic-sdk-ts",
@@ -14,7 +14,7 @@
     "clean": "rimraf target"
   },
   "dependencies": {
-    "@fstnetwork/runtime": "workspace:0.5.1-1"
+    "@fstnetwork/runtime": "workspace:0.6.0"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
