--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": "src",
 
     "emitDeclarationOnly": true,
-    "outDir": "dts"
+    "declarationDir": "./target/dts",
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["target"],
