--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,8 +6,8 @@
 version: 2
 updates:
   # Maintain dependencies for npm
-  - package-ecosystem: "npm"
-    directory: "/" # Location of package manifests
+  - package-ecosystem: 'npm'
+    directory: '/' # Location of package manifests
     schedule:
       interval: daily
 
