--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:tests": "yarn workspace @fstnetwork/tests run build",
     "build:loc-logic-sdk": "yarn workspace @fstnetwork/loc-logic-sdk run build",
     "clean": "yarn workspaces foreach -i -p -v run clean",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json}' && nixpkgs-fmt .",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,yaml,md}' && nixpkgs-fmt .",
     "lint": "eslint packages --ext .ts",
     "lint:fix": "eslint packages --fix --ext .ts"
   },
