--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,22 +31,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Setup yarn
-        run: npm install -g yarn
-
       - name: Set up Node.js ${{ matrix.node-version }} with yarn caching
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
 
+      - name: Setup yarn
+        run: npm install -g yarn
+
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Build
         run: yarn build
