--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -77,3 +77,26 @@ jobs:
 
       - name: Codespell
         uses: codespell-project/actions-codespell@master
+
+  eslint:
+    name: ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node.js 16 with yarn caching
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: yarn
+
+      - name: Setup yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Run eslint
+        run: yarn lint
