--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -9,10 +9,16 @@ updates:
   - package-ecosystem: 'npm'
     directory: '/' # Location of package manifests
     schedule:
-      interval: daily
+      interval: weekly
+      day: sunday
+      time: '21:00'
+    open-pull-requests-limit: 87
 
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
+      interval: weekly
+      day: sunday
+      time: '21:00'
+    open-pull-requests-limit: 87
