--- a/packages/loc-logic-sdk/package.json
+++ b/packages/loc-logic-sdk/package.json
@@ -14,8 +14,8 @@
     "clean": "rimraf target"
   },
   "dependencies": {
-    "@fstnetwork/logic": "workspace:0.8.0-1",
-    "@fstnetwork/runtime": "workspace:0.8.0-1"
+    "@fstnetwork/logic": "workspace:*",
+    "@fstnetwork/runtime": "workspace:*"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
