--- a/packages/logic/package.json
+++ b/packages/logic/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf target"
   },
   "dependencies": {
-    "@fstnetwork/runtime": "workspace:0.8.0-1"
+    "@fstnetwork/runtime": "workspace:*"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
