--- a/packages/logic/package.json
+++ b/packages/logic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fstnetwork/logic",
-  "version": "0.8.0-1",
+  "version": "0.9.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/fstnetwork/loc-logic-sdk-ts",
