build(runtime): fix build script

--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
+    "allowJs": true,
     "rootDir": "src",
 
     "emitDeclarationOnly": true,
-    "outDir": "dts"
+    "declarationDir": "./target/dts",
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["target"],
