ci(actions): fix publish script for yarn 4

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,5 +37,5 @@ jobs:
           YARN_NPM_REGISTRY_SERVER: https://registry.npmjs.org
           YARN_NPM_ALWAYS_AUTH: 'true'
         run: |
-          yarn workspaces foreach --no-private --topological -v \
+          yarn workspaces foreach --worktree --no-private --topological -v \
             npm publish --access public --tolerate-republish
